# caustics

./: .gitignore  CMakeLists.txt  README.md
src/: application.cpp  application.hpp  arc.frag  circle.frag  fullscreen.vert  line.frag  main.cpp  post.comp  post.glsl  scene.cpp  scene.hpp  shader.comp  shader.frag  shader.vert  trace.comp  trace.glsl  unique_resource.hpp  vec2.hpp
src/shaders/: arc.frag  circle.frag  fullscreen.vert  line.frag  post.glsl  shader.vert  trace.glsl
